--- a/solar_system/index.html
+++ b/solar_system/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <script src = "../lib/three.js/three.min.js"></script>
-<!--    <script src = "../lib/three.js/OrbitControls.js"></script> -->
-    <script src = "../lib/three.js/TrackballControls.js"></script>
+    <script src = "../lib/three.js/OrbitControls.js"></script> 
+<!--    <script src = "../lib/three.js/TrackballControls.js"></script> -->
 
 
     <script src = "celestial_body.js"></script>
