--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
         </div>
       </a>
 
+      <a href = "sundial">
+        <div class = "page" style = "background: url(res/sundial.png)">
+          <h3>Sundial Generator *</h3>
+        </div>
+      </a>
+
       <div class = "page" style = "background: url(https://s-media-cache-ak0.pinimg.com/236x/d9/5b/a2/d95ba22cef0cb9af20a99d1a4210ddf9.jpg)">
         <h3>Eclipses</h3>
       </div>
@@ -77,9 +83,6 @@
         <h3>Ephemerides</h3>
       </div>
 
-      <div class = "page" style = "background: url(res/cane.jpg)">
-        <h3>Sundial Generator</h3>
-      </div>
 	</div>
 
    <div id="bottom_bar">
