--- a/sundial/index.html
+++ b/sundial/index.html
@@ -5,6 +5,8 @@
   </head>
 
   <body>
-    <h3>Linge poola!</h3>
+    <h1>Sundial Generator</h1>
+    <img src = "../cgi-bin/sundial.py?lat=46&long=26" width = "1200px" height = "800px" />
+
   </body>
 </html>
