--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </a>
 
       <a href = "sundial">
-        <div class = "page" style = "background: url(res/sundial.png)">
+        <div class = "page" style = "background: url(res/sundial.jpg)">
           <h3>Sundial Generator *</h3>
         </div>
       </a>
