added google analytics, better css

--- a/solar_system/index.html
+++ b/solar_system/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Solar System</title>
     <link rel="stylesheet" type="text/css" href="../res/threeStylesheet.css" />
+    <script type="text/javascript" src="../lib/analytics.js"></script>
   </head>
   <body>
     <script src = "../lib/three.js/three.min.js"></script>
