--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
       <link rel="stylesheet" type="text/css" href="stylesheet.css" />
       <meta name='og:image' content="https://astronomytoolkit.ddns.net/res/solar_system.jpg">
       <meta name='og:description' content="Astronomy Website by Haurentziu">
+
+      <script type="text/javascript" src="lib/analytics.js"></script>
+
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-1754254364823400",
+    enable_page_level_ads: true
+  });
+</script>
   </head>
 
   <body itemscope itemtype="http://schema.org/Product">
