--- a/nbody/index.html
+++ b/nbody/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>N-Body Simulator</title>
 		<link rel = "stylesheet" type = "text/css" href = "../res/threeStylesheet.css"/>
+		<script type="text/javascript" src="../lib/analytics.js"></script>
 	</head>
 
 	<body>
