--- a/sundial/index.html
+++ b/sundial/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Sundial Generator</title>
 		<link rel = "stylesheet" type = "text/css" href = "stylesheet.css">
+    <script type="text/javascript" src="../lib/analytics.js"></script>
+
   </head>
 
   <body>
@@ -13,10 +15,12 @@
       <div id = "gradient">
 
       </div>
-      <h1>Sundial Generator(Work in progress)</h1>
+      <h1>Sundial Generator</h1>
       <h2>Create your own sundial in five minutes</h2>
     </div>
 		<script src = "get_image.js"></script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqMBMs0Tm9sEYxRm80faYpSEiJ44ouDks&callback=initMap"></script>
 
     <div id = "content">
 
@@ -25,11 +29,17 @@
   			<input type = "radio" name = "type" value = "vertical">Vertical Sundial<br>
   		</div>
 -->
-      <h3>Select your location</h3>
   		<div id = "location_select" >
-        <input type="button" value = "Auto Detect Location" /><br>
-  			Latitude: <input type = "text" id = "lat" value = "46"><br>
-  			Longitude: <input type = "text" id = "long" value = "26">
+        <h3>Select your location</h3>
+        <div class = "form">
+          <input type="button" value = "Auto Detect Location" onclick = "geolocate()"/><br>
+    			Latitude: <input type = "text" id = "lat" value = "51.48257"><br>
+    			Longitude: <input type = "text" id = "long" value = "0"><br><br>
+          <input type = "text" placeholder = "Search location..." id = "search_field">
+          <input type = "button" value = "Search" id = "search_button" onclick="geocode()"/>
+          <div id = "map">
+        </div>
+        </div>
       </div>
 
       <h3>Decorate your sundial</h3>
@@ -37,11 +47,14 @@
   			Motto: <input type = "text" id = "motto"><br>
   		</div>
 
-
-  		<input type = "button" value = "Get Sundial" onclick = "getImage()">
+      <div id = "submit">
+        <input type = "button" value = "Get Sundial" onclick = "getImage()">
+      </div>
   		<div id = "image_div"></div>
 
   </div>
-
+  <div id="bottom_bar">
+     <p>Copyright (c) 2016 Haurentziu Haurel All Rights Reserved.</p>
+   </div>
   </body>
 </html>
