--- a/index.html
+++ b/index.html
@@ -7,14 +7,6 @@
       <meta name='og:description' content="Astronomy Website by Haurentziu">
 
       <script type="text/javascript" src="lib/analytics.js"></script>
-
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-1754254364823400",
-    enable_page_level_ads: true
-  });
-</script>
   </head>
 
   <body itemscope itemtype="http://schema.org/Product">
@@ -50,8 +42,7 @@
           <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
       </a>
 
-
-      </a>
+	  	</a>
     </div>
   </div>
 
@@ -100,4 +91,4 @@
     </div>
 
   </body>
-</htm<>
+</html>
