--- a/basic_html/bottom_bar.html
+++ b/basic_html/bottom_bar.html
@@ -1,7 +1,10 @@
 <style>
   #bottom_bar{
     display: table;
-    position: relative;
+    position: absolute;
+    bottom: -50px;
+    right: 0;
+    left: 0;
     background-color: #212121;
     color: #FFF;
     width: 100%;
