--- a/basic_html/topbar.html
+++ b/basic_html/topbar.html
@@ -29,7 +29,7 @@
   	margin-left: 200px;
   }
 
-  #menu h5{
+  #menu h5, .dropdown_link{
     display: inline-block;
     padding: 10px;
     position: relative;
@@ -43,12 +43,37 @@
     -moz-transition: background-color 200ms ease-out 1ms;
     -o-transition: background-color 200ms ease-out 1ms;
     transition: background-color 200ms ease-out 1ms;
-
-
   }
 
   #menu h5:hover{
     background-color: rgba(205, 205, 205, 0.2);
+  }
+
+  .dropdown{
+    float: right;
+  }
+
+  .dropdown_content{
+    position: absolute;
+    top: 45px;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.8);
+    float: left;
+    width: 240px;
+    overflow: hidden;
+  }
+
+  .dropdown:hover .drop_link h5{
+    background-color: rgba(205, 205, 205, 0.15);
+  }
+
+  .dropdown_content a, .dropdown_content h5{
+    width: 100%;
+    display: block;
+    float: left !important;
+  }
+  .dropdown:hover .dropdown_content {
+      display: block;
   }
 
 
@@ -59,6 +84,27 @@
   <div id = "links">
     <a href = "../contact"><h5>Contact</h5></a>
     <a href = "../about"><h5>About</h5></a>
+
+    <div class = "dropdown">
+      <a class = "drop_link" href = "#"><h5>Articles</h5></a>
+      <div class = "dropdown_content">
+        <a href = "../rosetta"><h5>Rosetta Spacecraft</h5></a>
+        <a href = "../history"><h5>History Of Astronomy</h5></a>
+        <a href = "../subfields"><h5>Subfields Of Astronomy</h5></a>
+        <a href = "../halley"><h5>Halley's Comet</h5></a>
+      </div>
+    </div>
+
+    <div class = "dropdown">
+      <a class = "drop_link" href = "#"><h5>Tools</h5></a>
+      <div class = "dropdown_content">
+        <a href = "../skychart"><h5>Sky Chart</h5></a>
+        <a href = "../nbody"><h5>N-Body Simulator</h5></a>
+        <a href = "../solar_system"><h5>Solar System</h5></a>
+        <a href = "../sundial"><h5>Sundial</h5></a>
+      </div>
+    </div>
+
     <a href = "../"><h5>Home</h5></a>
   </div>
 </div>
