removed old stuff & added  mandelbrot

--- a/basic_html/bottom_bar.html
+++ b/basic_html/bottom_bar.html
@@ -1,7 +1,7 @@
 <style>
   #bottom_bar{
     display: table;
-    position: absolute;
+    position: relative;
     bottom: -50px;
     right: 0;
     left: 0;
@@ -19,5 +19,5 @@
 </style>
 
 <div id="bottom_bar">
-   <p>Copyright (c) 2016 Haurentziu Haurel All Rights Reserved.</p>
+   <p>Copyright (c) 2016 Haurentziu All Rights Reserved.</p>
 </div>
