--- a/mandelbrot/index.html
+++ b/mandelbrot/index.html
@@ -277,9 +277,8 @@
 
     <div id = "bellowAbout">
     </div>
+    <canvas id = "selector_canvas"></canvas>
     <img src="../res/menu_ico.png" width="30px" height="30px" id = "toogle_menu_button" onclick="toogle_menu();"/>
-
-
 
     <div id = "menu">
       <div id = "tab_button_container">
